tests/files/type_checker_tests/should_pass/273.cmdr
//Test for loops type check
i = 0;
for (;;i++) {
    println i;
}
