tests/files/type_checker_tests/should_fail/049.cmdr
//Should fail since for condition is not boolean
for (i = 0; "hello"; i++) {
	echo "hi";
}